<resources>
    <string name="app_name">Assistant</string>
    <string name="commands">Commands</string>
    <string name="work_in_background">Work in background</string>
    <string name="use_proximity_sensor">Use proximity sensor</string>
    <string name="setting">Setting</string>
    <string name="enable">ENABLE</string>
    <string name="disable">DISABLE</string>
    <string name="todo">TODO</string>
    <string name="msg">Please enable all permissions</string>
    <string name="description">Description</string>
    <string name="menu_to_settings">Menu to Settings</string>
    <string name="user">User</string>
    <string name="settings_label">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="run_in_background">Run in background</string>
    <string name="does_not_work_in_background">Does not work in background</string>
    <string name="does_work_in_background">Does work in background</string>
    <string name="finish">FINISH</string>
    <!--<string name="run_in_background">Run in background</string>-->

    <!-- My settings values -->
    <!--<string name="run_in_background">@style/backgeound_category</string>-->
</resources>
